# GMath

./: CMakeLists.txt  README.md  build.bat  build.sh
include/GMath/: API.hpp  DynamicArray.hpp  Fraction.hpp  LibraryAPI.hpp  Matrix.hpp  Matrix2.hpp  Matrix3.hpp  Types.hpp
src/: Fraction.cpp  Matrix.cpp  Matrix2.cpp
src/GMath/: build.cmake  test.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp
